--- a/website/css/general.css
+++ b/website/css/general.css
@@ -6,7 +6,7 @@
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 
-*				{ font-family: 'Open Sans', sans-serif; }
+*							{ font-family: 'Open Sans', sans-serif; }
 
 /* colors
 main:		#138500	green
@@ -18,61 +18,63 @@ white:		#f2f2f2	super light grey
 black:		#080808 almost black grey
 */
 
-body 			{ margin: 0px; background-image: url("../img/background.jpg"); background-position: bottom center; background-repeat: no-repeat; background-size: cover; color: #f2f2f2; }
+body 						{ margin: 0px; background-image: url("../img/background.jpg"); background-position: bottom center; background-repeat: no-repeat; background-size: cover; color: #f2f2f2; }
 
 /* header general */
-header					{ height: 130px; margin-bottom: 25px; }
-header::after			{ content: ''; position: absolute; left: 0; top: 0px; width: 100%; height: 115px; background: #138500; box-shadow: inset 0 0 14px #0c5200; z-index: -1; transform-origin: left top; transform: skewY(-1deg); }
-header .container		{ height: 100%; }
-header .container > div	{ height: 100%; line-height: 90px; }
+header						{ height: 130px; margin-bottom: 25px; }
+header::after				{ content: ''; position: absolute; left: 0; top: 0px; width: 100%; height: 115px; background: #138500; box-shadow: inset 0 0 14px #0c5200; z-index: -1; transform-origin: left top; transform: skewY(-1deg); }
+header .container			{ height: 100%; }
+header .container > div		{ height: 100%; line-height: 90px; }
 /* header a tags */
 header a,
 header a:active,
 header a:hover,
-header a:focus			{ text-decoration: none; color: #f2f2f2; outline: 0; }
+header a:focus				{ text-decoration: none; color: #f2f2f2; outline: 0; }
 /* header logo img and h1 */
-header .logo			{ display: inline-block; height: 100px; }
-header h1				{ display: inline-block; position: relative; left: 20px; margin: 0px; }
+header .logo				{ display: inline-block; height: 100px; }
+header h1					{ display: inline-block; position: relative; left: 20px; margin: 0px; }
 /* header nav */
 header .menu-button 		{ height: 90px; margin-top: 10px; padding: 30px; position: absolute; right: 10px; cursor: pointer; }
 header .menu-button:hover	{ background-color: #107300; box-shadow: inset 0 0 7px #0c5200; }
 header .menu-button:active	{ background-color: #159600; }
 header .nav-horizontal		{ height: 60px; white-space: nowrap; position: absolute; right: 0px; margin-top: 20px; line-height: 60px; }
-header .nav-horizontal a	{ height: 100%; width: 120px; display: inline-block; text-align: center; text-decoration: none; color: #f2f2f2; font-size: 17px; font-weight: bold; }
+header .nav-horizontal a	{ height: 100%; width: 120px; display: inline-block; text-align: center; text-decoration: none; color: #f2f2f2; font-size: 1.3em; font-weight: bold; }
 header .nav-vertical		{ z-index: 99; white-space: nowrap; position: absolute; right: 0px; margin-top: 20px; background-color: #138500; }
-header .nav-vertical a		{ display: block; width: 300px; height: 60px; line-height: 60px; text-align: center; text-decoration: none; color: #f2f2f2; font-size: 17px; font-weight: bold; }
+header .nav-vertical a		{ display: block; width: 300px; height: 60px; line-height: 60px; text-align: center; text-decoration: none; color: #f2f2f2; font-size: 1.3em; font-weight: bold; }
 header nav a:hover			{ background-color: #107300; box-shadow: inset 0 0 7px #0c5200; }
 header nav a:active			{ background-color: #159600; }
 header nav .dropdown		{ display: none; position: absolute; background-color: #138500; left: 120px; margin-top: -2px; margin-left: 3px; z-index: 99; box-shadow: inset 0 0 4px #0c5200; }
 .dropdown a					{ display: block!important; }
 
 /* main general */
-.page 			{ background-color: rgba(8, 8, 8, 0.45); color: #f2f2f2; padding-bottom: 15px; }
-.page a			{ text-decoration: none; color: #f2f2f2; }
-.page h2		{ font-size: 28px; margin: 20px 0px; text-align: center; border-top: 2px solid #f2f2f2; border-bottom: 2px solid #f2f2f2; background-color: rgba(8, 8, 8, 0.2); }
-.page h3		{ font-size: 20px; margin: 0px; text-align: center; }
-.page .button			{ border: 2px solid #f2f2f2; margin: 0% auto; cursor: pointer; margin: 15px 0px; background-color: rgba(8, 8, 8, 0.2); text-align: center; font-size: 1.5em; }
-.page .button:hover		{ background-color: rgba(8, 8, 8, 0.3); }
-.page .button:active	{ background-color: rgba(8, 8, 8, 0.4); }
+.page 						{ background-color: rgba(8, 8, 8, 0.45); color: #f2f2f2; padding-bottom: 15px; font-size: 1.15em; }
+.page a						{ text-decoration: none; color: #f2f2f2; }
+.page h2					{ font-size: 2em; margin: 20px 0px; text-align: center; border-top: 2px solid #f2f2f2; border-bottom: 2px solid #f2f2f2; background-color: rgba(8, 8, 8, 0.2); }
+.page h3					{ font-size: 1.5em; margin: 0px; text-align: center; }
+.page .button				{ border: 2px solid #f2f2f2; margin: 0% auto; cursor: pointer; margin: 15px 0px; background-color: rgba(8, 8, 8, 0.2); text-align: center; font-size: 1.5em; }
+.page .button:hover			{ background-color: rgba(8, 8, 8, 0.3); }
+.page .button:active		{ background-color: rgba(8, 8, 8, 0.4); }
 
 /* footer general */
-footer 				{ position: relative; overflow: hidden; color: #f2f2f2; margin-top: 25px; }
-footer .container 	{ padding-top: 15px; }
-footer::after		{ content: ''; position: absolute; left: 0px; bottom: 0px; width: 100%; height: 100%; background: #138500; box-shadow: inset 0 0 14px #0c5200; z-index: -1; transform-origin: right bottom; transform: skewY(-1deg); }
-footer h3			{ text-align: center; }
+footer 						{ position: relative; overflow: hidden; color: #f2f2f2; margin-top: 25px; }
+footer .container 			{ padding-top: 15px; }
+footer::after				{ content: ''; position: absolute; left: 0px; bottom: 0px; width: 100%; height: 100%; background: #138500; box-shadow: inset 0 0 14px #0c5200; z-index: -1; transform-origin: right bottom; transform: skewY(-1deg); }
+footer h3					{ text-align: center; }
+footer .row * > div			{ display: table; margin: 0 auto; }
+footer .row * > div > *		{ display: inline-block; }
 /* footer navigation */
-footer nav a,
-footer nav a:active,
-footer nav a:hover,
-footer nav a:focus		{ text-decoration: none; color: #f2f2f2; display: block; outline: 0; }
-header nav a:hover		{ background-color: #107300; }
-header nav a:active		{ background-color: #159600; }
+.footer-nav nav				{ display: inline-block; float: left; }
+.footer-nav a,
+.footer-nav a:active,
+.footer-nav a:hover,
+.footer-nav a:focus			{ width: 100px; text-align: center; padding: 2px; text-decoration: none; color: #f2f2f2; display: block; outline: 0; }
+.footer-nav a:hover			{ background-color: #107300; }
+.footer-nav a:active		{ background-color: #159600; }
 /* footer contact */
-
-/* footer login */
-
+.footer-contact	ul			{ list-style-type: none; padding: 0; }
+.footer-contact span		{ display: inline-block; width: 100px; }
 /* footer logo */
-footer .logo 		{ text-align: center; }
-footer img			{ width: 150px; }
+.footer-logo 				{ text-align: center; }
+.footer-logo img			{ width: 150px; }
 /* footer bottom */
-footer .bottom p	{ text-align: center; }
+.footer-bottom p			{ text-align: center; }
