Added content, changed the way it's displayed

--- a/website/css/general.css
+++ b/website/css/general.css
@@ -18,7 +18,7 @@ white:		#f2f2f2	super light grey
 black:		#080808 almost black grey
 */
 
-body 						{ margin: 0px; background-image: url("../img/background.jpg"); background-position: bottom center; background-repeat: no-repeat; background-size: cover; color: #f2f2f2; }
+body 						{ margin: 0px; background-image: url("../img/background.jpg"); background-position: center; background-repeat: no-repeat; background-size: cover; color: #f2f2f2; }
 
 /* header general */
 header						{ height: 130px; margin-bottom: 25px; }
@@ -71,7 +71,7 @@ footer .row * > div > *		{ display: inline-block; }
 .footer-nav a:hover			{ background-color: #107300; }
 .footer-nav a:active		{ background-color: #159600; }
 /* footer contact */
-.footer-contact	ul			{ list-style-type: none; padding: 0; }
+.footer-contact	ul			{ list-style-type: none; padding: 0px; }
 .footer-contact span		{ display: inline-block; width: 100px; }
 /* footer logo */
 .footer-logo 				{ text-align: center; }
